Create endpoint ro add genres to movies
