# src/Core/Infrastructure/Domain/Model/Movie/MySQLMovieRepository.php
@@ -5,7 +5,10 @@ declare(strict_types=1);
 namespace App\Core\Infrastructure\Domain\Model\Movie;
 
 use App\Core\Domain\Exception\Movie\MovieAlreadyExistException;
+use App\Core\Domain\Model\Genre\Genre;
+use App\Core\Domain\Model\Genre\GenreId;
 use App\Core\Domain\Model\Movie\Movie;
+use App\Core\Domain\Model\Movie\MovieId;
 use App\Core\Domain\Model\Movie\MovieRepositoryInterface;
 use Doctrine\DBAL\Connection;
 use Doctrine\ORM\EntityManagerInterface;
@@ -40,6 +43,26 @@ class MySQLMovieRepository implements MovieRepositoryInterface
         $this->saveMovieGenres($movie);
     }
 
+    public function addGenreToMovies(Movie $movie): void
+    {
+        foreach ($movie->genres() as $genre) {
+            $sql = 'SELECT * FROM movie_genre WHERE movie_id = :movieId AND genre_id = :genreId LIMIT 1';
+            $movieId = $movie->id();
+            $genreId = $genre->id();
+
+            $statement = $this->connection->executeQuery($sql, [
+                'movieId' => $movieId->id(),
+                'genreId' => $genreId->id()
+            ]);
+
+            if (0 < $statement->rowCount()) {
+                continue;
+            }
+
+            $this->saveMovieGenre($movieId, $genreId);
+        }
+    }
+
     public function checkMovieIsUnique(Movie $movie): void
     {
         $sql = 'SELECT id FROM movie WHERE title = :title AND year = :year LIMIT 1';
@@ -59,16 +82,21 @@ class MySQLMovieRepository implements MovieRepositoryInterface
     private function saveMovieGenres(Movie $movie)
     {
         foreach ($movie->genres() as $genre) {
-            $sql = 'INSERT INTO movie_genre SET 
+            $this->saveMovieGenre($movie->id(), $genre->id());
+        }
+    }
+
+    private function saveMovieGenre(MovieId $movieId, GenreId $genreId): void
+    {
+        $sql = 'INSERT INTO movie_genre SET 
                     `movie_id` = :movieId,
                     `genre_id` = :genreId';
 
-            $parameters = [
-                'movieId' => $movie->id()->id(),
-                'genreId' => $genre->id()->id()
-            ];
+        $parameters = [
+            'movieId' => $movieId->id(),
+            'genreId' => $genreId->id()
+        ];
 
-            $this->connection->executeStatement($sql, $parameters);
-        }
+        $this->connection->executeStatement($sql, $parameters);
     }
 }
